# Simulopolis

./: .gitignore  CMakeLists.txt  CityBuilder.cbp  CityBuilder.layout  README.md  Simulopolis.cbp
cmake/Modules/: FindTinyXML2.cmake
media/: editor.xml  fonts.xml  guis.xml  images.xml  menu.xml  musics.xml  settings.txt  stylesheets.xml  textures.xml
media/articles/: animals.txt  new_city.xml  new_year.xml
media/cities/: names.txt
media/companies/: domains.txt  fruits.txt  prefixes.txt  suffixes.txt
media/guis/: editor.xml  load_city.xml  menu.xml  new_city.xml  settings.xml
media/language/: plurals.txt
media/newspapers/: patterns.txt
media/persons/: cars.txt  female_first_names.txt  male_first_names.txt
saves/: saves.xml
src/: Animation.h  AnimationHandler.cpp  AnimationHandler.h  City.cpp  City.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateEditor.cpp  GameStateEditor.h  GameStateStart.cpp  GameStateStart.h  Gui.cpp  Gui.h  GuiEntry.cpp  GuiEntry.h  GuiStyle.cpp  GuiStyle.h  Map.cpp  Map.h  TextureManager.cpp  Tile.cpp  Tile.h  main.cpp
src/ai/: Goal.cpp  Goal.h  GoalEnterCity.cpp  GoalEnterCity.h  GoalEnterCityEvaluator.cpp  GoalEnterCityEvaluator.h  GoalEvaluator.cpp  GoalEvaluator.h  GoalGetBetterHome.cpp  GoalGetBetterHome.h  GoalGetBetterHomeEvaluator.cpp  GoalGetBetterHomeEvaluator.h  GoalGetBetterWork.cpp  GoalGetBetterWork.h  GoalGetBetterWorkEvaluator.cpp  GoalGetBetterWorkEvaluator.h  GoalLeaveCity.cpp  GoalLeaveCity.h  GoalLeaveCityEvaluator.cpp  GoalLeaveCityEvaluator.h  GoalMoveTo.cpp  GoalMoveTo.h  GoalRest.cpp  GoalRest.h  GoalRestEvaluator.cpp  GoalRestEvaluator.h  GoalShop.cpp  GoalShop.h  GoalShopEvaluator.cpp  GoalShopEvaluator.h  GoalThink.cpp  GoalThink.h  GoalWait.cpp  GoalWait.h  GoalWork.cpp  (+13 more)
(+204 files in other folders)
